Remove nullable from Kotlin example
Use `lateinit` instead of allowing NullPointerExceptions.

--- a/docs/modules/ROOT/pages/servlet/test/mockmvc/setup.adoc
+++ b/docs/modules/ROOT/pages/servlet/test/mockmvc/setup.adoc
@@ -52,7 +52,7 @@ class CsrfShowcaseTests {
     @Autowired
     private lateinit var context: WebApplicationContext
 
-    private var mvc: MockMvc? = null
+    private lateinit var mvc: MockMvc
 
     @BeforeEach
     fun setup() {
