--- a/docs/modules/ROOT/pages/servlet/test/mockmvc/setup.adoc
+++ b/docs/modules/ROOT/pages/servlet/test/mockmvc/setup.adoc
@@ -44,7 +44,7 @@ Kotlin::
 +
 [source,kotlin,role="secondary"]
 ----
-@ExtendWith(SpringExtension.class)
+@ExtendWith(SpringExtension::class)
 @ContextConfiguration(classes = [SecurityConfig::class])
 @WebAppConfiguration
 class CsrfShowcaseTests {
