docs: update doc for cors intgeration with servlet apps
 - update file docs/modules/ROOT/pages/servlet/integrations/cors.adoc
    - add setAllowedHeaders("Authorization") to alert other developers that headers like Authorization is not allowed by default.

--- a/docs/modules/ROOT/pages/servlet/integrations/cors.adoc
+++ b/docs/modules/ROOT/pages/servlet/integrations/cors.adoc
@@ -151,6 +151,7 @@ public class WebSecurityConfig {
 		CorsConfiguration configuration = new CorsConfiguration();
 		configuration.setAllowedOrigins(Arrays.asList("https://api.example.com"));
 		configuration.setAllowedMethods(Arrays.asList("GET","POST"));
+		config.setAllowedHeaders(Arrays.asList("Authorization")); // remember to add necessary headers, as headers like "Authorization" is not allowed be default
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
